--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,8 +12,6 @@
   .App {
     background-color: #2b2b2b;
     min-height: 100vh;
-    padding-left: 1em;
-    padding-right: 1em;
   }
 }
 
@@ -22,8 +20,6 @@
   .App {
     background-color: #2b2b2b;
     min-height: 100vh;
-    padding-left: 1vw;
-    padding-right: 1vw;
   }
 }
 
@@ -32,7 +28,9 @@
   .App {
     background-color: #2b2b2b;
     min-height: 100vh;
-    padding-left: 20vw;
-    padding-right: 20vw;
+  }
+
+  Main {
+    height: 90vh;
   }
 }
