--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,10 @@
     background-color: #2b2b2b;
     min-height: 100vh;
   }
+  
+  main {
+    height: 90vh;
+  }
 }
 
 /* For tablets */
@@ -28,9 +32,5 @@
   .App {
     background-color: #2b2b2b;
     min-height: 100vh;
-  }
-
-  Main {
-    height: 90vh;
   }
 }
