Implemented a very basic about page

--- a/frontend/src/components/container/Container.css
+++ b/frontend/src/components/container/Container.css
@@ -15,6 +15,11 @@
   .ContentContainer p {
     margin-top: 0.5em;
   }
+
+  .ContentContainer a {
+    font-size: 1em;
+    text-decoration: underline;
+  }
 }
 
 /* Tablet devices: */
