Added Login's orange color to hr elements

--- a/frontend/src/components/container/Container.css
+++ b/frontend/src/components/container/Container.css
@@ -20,6 +20,10 @@
     font-size: 1em;
     text-decoration: underline;
   }
+
+  .ContentContainer hr {
+    color: #f0802a;
+  }
 }
 
 /* Tablet devices: */
