--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,46 +3,225 @@
 
 /* Defaults */
 * {
-  margin: 0;  
-  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  color: white;
 }
+
+body {
+  background-color: #181818;
+}
+
+
+/* Layout */
+
+.App {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+  max-width: 75rem;
+  width: 100%;
+  margin: auto;
+  min-height: calc(100vh - 10rem); /* 10rem being topbar height */
+}
+
+header {
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  header {
+    background-color: rgba(20, 20, 20, 0.6);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px); /* This should provide support for Safari, but needs to be tested */
+  }
+}
+
+@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  header {
+    background-color: rgba(20, 20, 20, 0.95);
+  }
+}
+
+footer {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+
+/* Headlines */
+
+h1 {
+  margin: 1rem;
+  z-index: 2;
+  font-weight: 600;
+}
+
+h2 {
+  margin: 2rem 1rem 1rem 1rem;
+  z-index: 2;
+  font-weight: 400;
+}
+
+h3 {
+  margin: 1rem;
+  font-weight: 400;
+}
+
+h4 {
+  margin: 0 1rem;
+}
+
+/* standard links */
+a {
+  color: #fd8738;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+/* paragraph */
+p {
+  margin: 1rem;
+  padding: .5rem 0;
+  line-height: 1.8rem;
+  color: rgb(220, 220, 220);
+}
+
+.Classy {
+  font-family: 'Lora', serif;
+  font-weight: 600;
+  font-size: 1.3rem;
+  color: white;
+  padding-left: 1rem !important;
+  border-left: .3rem solid #fd8738;
+}
+
+/* text selection */
+
+::-moz-selection { /* Code for Firefox */
+  color: white;
+  background: #fd8738;
+}
+
+::selection {
+  color: white;
+  background: #fd8738;
+}
+
 
 /* For mobile: */
 @media only screen and (min-width: 0px) {
-  .App {
-    background-color: #2b2b2b;
-    min-height: 100vh;
-  }
-   
   main {
-    min-height: 90vh;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
+    margin: 5rem auto;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }  
+
+  h3 {
+    font-size: 1.2rem;
   }
 }
 
-/* For tablets */
-@media only screen and (min-width: 800px) {
-  main {
-  padding-left: 10%;
-  padding-right: 10%;
+
+/* For mobile: */
+@media only screen and (min-width: 400px) {
+  h1 {
+    font-size: 2.5rem;
   }
 
-  .App {
-    background-color: #2b2b2b;
-    min-height: 100vh;
+  h2 {
+    font-size: 2rem;
+  }  
+
+  h3 {
+    font-size: 1.5rem;
+  }
+}
+
+
+/* For tablets */
+@media only screen and (min-width: 800px) {
+
+  h1 {
+    font-size: 3.5rem;
+    padding: 0 1.5rem;
+    letter-spacing: .1rem;
+  }
+
+  /* Decoration corner (top left) */
+  h1:before {
+    z-index: -1;
+    content: ' ';
+    position: absolute;
+    width: 4rem;
+    height: 2rem;
+    border: .7rem #353030bc;
+    border-style: solid none none solid;
+    margin-left: -1.5rem;
+  }
+  
+  /* Decoration corner (bottom right) */
+  h1:after {
+    z-index: -1;
+    content: ' ';
+    position: absolute;
+    width: 1.8rem;
+    height: 2.5rem;
+    border: .7rem #353030bc;
+    border-style: none solid solid none;
+    margin-left: -1rem;
+    margin-top: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+    line-height: 3rem;
+    padding-top: 1rem;
+    letter-spacing: .1rem;
+  }
+
+  /* Decoration corner (top right) */
+  h2::after {
+    z-index: -1;
+    content: ' ';
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    border: .5rem #353030bc;
+    border-style: solid solid none none;
+    margin-left: -1rem;
+    margin-top: -1rem;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+
+
+  /* Split long paragraphs into two columns */
+  .WideTextContainer {
+    column-count: 2;
+    column-gap: 2rem;
+    column-rule: .2rem solid #101010;
   }
 }
 
 /* For desktop: */
 @media only screen and (min-width: 1200px) {
-  main {
-    padding-left: 15%;
-    padding-right: 15%;
-  }
 
-  .App {
-    background-color: #2b2b2b;
-    min-height: 100vh;
-  }
 }
