--- a/frontend/src/components/event/Events.css
+++ b/frontend/src/components/event/Events.css
@@ -1,10 +1,25 @@
-@media only screen and (min-width: 0px) {
-  .EventList {
-    display: flex;
-    flex-direction: column;
-  }
+.Events {
+  max-width: 75rem;
+  width: 100%;
+  margin: auto;
+}
 
-  .EventList li {
-    list-style-type: none;
-  }
+.EventList {
+  padding: 1rem;
+}
+
+.EventList li {
+  list-style-type: none;
+}
+
+@media only screen and (min-width: 0px) {
+ 
+}
+
+@media only screen and (min-width: 800px) {
+
+}
+
+@media only screen and (min-width: 1200px) {
+
 }
