--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,26 +1,48 @@
-.Footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #101010;
-  width: 60%;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-  padding-left: 20%;
-  padding-right: 20%;
-
-  border-top: 1px solid #f0802a;
-
-  margin-top: 1em;
-}
-
-
-.Footer p, .Footer i, .Footer a {
-  font-size: 9pt;
+.FooterContainer {
   color: white;
+  padding: 2rem;
+  width: 100%;
+  margin: auto;
 }
 
-.Footer a:hover {
-  color: #f0802a;
+.FooterMsg {
+  width: 100%;
+  display: block;
+  font-size: .9rem;
 }
 
+.BottomLine {
+  font-size: .75rem;
+  max-width: 30rem;
+  width: 100%;
+  margin: 0;
+}
+
+@media only screen and (min-width: 0px) {
+  .FooterContainer {
+    max-width: 30rem;
+  }
+
+  .FooterMsg {
+    padding: 0;
+    margin: auto;
+    max-width: 30rem;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .FooterContainer {
+    max-width: 77rem;
+  }
+  
+  .FooterContainer div {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .FooterMsg {
+    padding: 2rem 1rem 4rem 0;
+    margin: 0;
+    max-width: 20rem;
+  }
+}
