--- a/frontend/src/components/about/logos/StyretLogo.css
+++ b/frontend/src/components/about/logos/StyretLogo.css
@@ -1,22 +1,24 @@
-.Active .StyretLogo .Handlebars {
-    animation: tilt 1.5s ease-in-out 1;
-    transform-origin: 50px 70px;
-}
+@media only screen and (min-width: 800px) {
+    .Active .StyretLogo .Handlebars {
+        animation: tilt 1.5s ease-in-out 1;
+        transform-origin: 50px 70px;
+    }
 
-@keyframes tilt {
-    25% {
-        transform: rotate(-15deg);
-    }
-    35% {
-        transform: rotate(-15deg);
-    }
-    70% {
-        transform: rotate(13deg);
-    }
-    80% {
-        transform: rotate(13deg);
-    }
-    100% {
-        transform: rotate(0);
+    @keyframes tilt {
+        25% {
+            transform: rotate(-15deg);
+        }
+        35% {
+            transform: rotate(-15deg);
+        }
+        70% {
+            transform: rotate(13deg);
+        }
+        80% {
+            transform: rotate(13deg);
+        }
+        100% {
+            transform: rotate(0);
+        }
     }
 }
