--- a/frontend/src/components/event/EventPage.css
+++ b/frontend/src/components/event/EventPage.css
@@ -43,7 +43,7 @@
 .EventDetails>div {
     display: inline-flex;
     margin: auto;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     margin-bottom: 1rem;
 }
 
@@ -51,6 +51,15 @@
     color: rgb(200, 200, 200);
     width: min-content;
     padding-right: 1rem;
+    display: inline-flex;
+}
+
+.EventDetails>div>div:first-child>i {
+    line-height: 1.5rem;
+    color: rgb(200, 200, 200);
+    width: 1.5rem;
+    padding-right: .5rem;
+    text-align: center;
 }
 
 .EventDetails>div>div:last-child {
@@ -60,7 +69,7 @@
 
 .EventDetails .Day {
     width: 14rem;
-    font-size: 1.9rem;
+    font-size: 1.5rem;
     line-height: 3rem;
 }
 
