--- a/frontend/src/components/about/About.css
+++ b/frontend/src/components/about/About.css
@@ -1,3 +1,9 @@
+.AboutContent {
+    max-width: 75rem;
+    width: 100%;
+    margin: auto;
+}
+
 .AboutContent section {
     margin-bottom: 5rem;
 }
@@ -31,7 +37,7 @@
     max-width: 33rem;
     max-height: 22rem;
     object-fit: cover;
-    border-radius: .5rem;
+    border-radius: .3rem;
     clip-path: polygon(7rem 0, 100% 0, 100% 100%, 0 100%, 0 7rem, 2rem 7rem, 2rem 2rem, 7rem 2rem);
 }
 
