--- a/frontend/src/components/event/EventListItem.css
+++ b/frontend/src/components/event/EventListItem.css
@@ -8,75 +8,92 @@
     -ms-hyphens: auto;
     hyphens: auto;
 	overflow-wrap: break-word;
-	margin-bottom: 1rem;
 }
 
 .EventListItem:hover {
 	background-color: #212121;
 }
 
-.EventInfo {
+.EventListItemInfo {
 	width: 100%;
-	min-width: 1%;
+	min-width: 10rem;
+	margin: auto 0;
 }
 
-.EventInfo h4 {
-	font-size: 1.5rem;
-	line-height: 1.5rem;
+.EventListItemInfoName {
 	font-weight: 400;
 	margin: 0;
 }
 
-.EventInfo>div {
+.EventListItemInfoDetails {
 	padding-top: .5rem;
-}
-
-.EventInfo div {
 	display: inline-block;
 	font-size: 1rem;
 	line-height: 1.2rem;
 	color: #a9a9a9;
 }
 
-.EventInfo div i {
+.EventListItemInfoDetails>div {
+	display: inline-block;
+	color: #a9a9a9;
+}
+
+.EventListItemInfoDetails i {
 	padding-right: .2rem;
 	color: #a9a9a9;
 }
 
-.Divider {
+.EventListItemInfoDetailsDivider {
 	font-weight: 900;
 	padding: 0 .5rem;
 }
 
-.EventImg img, .EventImg svg {
+.EventListItemImg img, .EventListItemImg svg {
 	display: block;
-	max-height: 6rem;
+	max-height: 5rem;
     height: 100%;
-	width: 15rem;
+	width: 12.5rem;
     object-fit: cover;
+	border-radius: .2rem;
 }
 
 @media only screen and (min-width: 0px) {
 
-	.EventInfo {
-		padding: 1rem;
-		padding-bottom: .6rem;
+	.EventListItem {
+		padding: .5rem 1rem;
 	}
 
-	.EventImg {
+	.EventListItemInfo {
+		padding: .5rem 0 .1rem .5rem;
+	}
+
+	.EventListItemInfoName {
+		font-size: 1.3rem;
+		line-height: 1.3rem;
+	}
+
+	.EventListItemImg {
 	    display: none;
 	}
-
 }
 
 @media only screen and (min-width: 800px) {
 
-	.EventInfo {
-		padding: 1.4rem;
-		padding-bottom: 1rem;
+	.EventListItem {
+		padding: 1rem;
+		border-radius: .2rem;
 	}
 
-	.EventImg {
+	.EventListItemInfo {
+		padding: .5rem 1rem .1rem 1rem;
+	}
+
+	.EventListItemInfoName {
+		font-size: 1.5rem;
+		line-height: 1.5rem;
+	}
+
+	.EventListItemImg {
 		display: block;
 	}
 }
