--- a/frontend/src/components/event/EventPage.css
+++ b/frontend/src/components/event/EventPage.css
@@ -2,84 +2,82 @@
 
 .EventPage {
     display: grid;
-    column-gap: 2rem;
     align-items: start;
+    max-width: 75rem;
+    margin: auto;
 }
 
 .EventDetails {
-    grid-area: a;
+    grid-area: det;
 }
 
 .EventBanner {
-    grid-area: b;
+    grid-area: ban;
 }
 
 .EventDescription {
-    grid-area: c;
+    grid-area: des;
+}
+
+.EventPage .Map {
+	grid-area: map;
 }
 
 
 /* event details */
 
 .EventDetails {
-    background-color: #212121;
-}
-
-.EventCategory {
-    font-size: 2rem;
-    line-height: 2rem;
-    font-weight: 600;
-    padding: 1.5rem;
-    margin: 0;
+    overflow: hidden;
     width: 100%;
-    background-color: #101010;
 }
 
 .EventDetails .Date {
     display: flex;
-    padding: 0;
+    gap: 1rem;
+    margin-bottom: 2rem;
 }
 
-.EventDetails>div {
-    display: inline-flex;
-    margin: auto;
-    padding: 0 1rem;
-    margin-bottom: 1rem;
-}
-
-.EventDetails>div>div:first-child {
-    color: rgb(200, 200, 200);
-    width: min-content;
-    padding-right: 1rem;
-    display: inline-flex;
-}
-
-.EventDetails>div>div:first-child>i {
-    line-height: 1.5rem;
-    color: rgb(200, 200, 200);
-    width: 1.5rem;
-    padding-right: .5rem;
-    text-align: center;
-}
-
-.EventDetails>div>div:last-child {
-    color: white;
-    width: 100%;
-}
-
-.EventDetails .Day {
-    width: 14rem;
+.EventDetails .DateExpresion {
     font-size: 1.5rem;
-    line-height: 3rem;
+    line-height: 2rem;
+    margin: auto 0;
 }
 
-.EventDetails .SocialIcon {
-	padding-left: 1rem;
-    display: inline-block;
+.EventDetailsList {
+    display: grid;
+    grid-template-columns: min-content auto;
+    gap: 1rem;
+}
+
+.EventDetailsList-lable {
+    color: #a9a9a9;
+    display: inline-flex;
+}
+
+/* lable icon */
+.EventDetailsList-lable>i {
+    line-height: 1.5rem;
+    color: #a9a9a9;
+    width: 1.5rem;
+    text-align: center;
+    padding-right: .5rem;
+}
+
+.EventDetailsList-info {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+	overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 
 /* event banner */
+
+.EventBanner {
+    overflow: hidden;
+}
 
 .EventBanner picture {
     display: block;
@@ -95,8 +93,15 @@
 
 /* event description */
 
+.EventDescription h2, 
+.EventDescription h3, 
+.EventDescription h4, 
+.EventDescription p {
+    margin: 1rem 0;
+}
+
 .EventDescription ul, .EventDescription ol {
-    margin: 1rem 2rem;
+    margin: 1rem;
 }
 
 .EventDescription ul {
@@ -116,79 +121,73 @@
     text-decoration: underline;
 }
 
-
-/* map */
-
-.EventPage .Map {
-	grid-area: d;
-}
-
-
   
 @media only screen and (min-width: 0px) {
     .EventPage {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-areas: 
-            "b"
-            "a"
-            "c"
-            "d";
+            "ban"
+            "det"
+            "des"
+            "map";
+        column-gap: 0;
     }
 
     .EventDetails {
-        width: 100%;
-    }
-
-    .EventCategory {
-        font-size: 1.5rem;
-    }
-
-    .EventDetails>div>div:last-child {
-        text-align: left;
-    }
-
-    .EventDetails .Day {
         padding: 1rem;
+        background-color: #212121;
+        text-align: right;
     }
 
     .EventPage .Map {
-        padding: 0 2rem;
+        padding: 3rem;
+        margin: auto;
+    }
+
+    .EventDescription {
+        padding: 1rem;
     }
 }
+
+@media only screen and (min-width: 400px) {
+    .EventDetails {
+        padding: 2rem;
+        text-align: left;
+    }
+
+}
+
   
 @media only screen and (min-width: 800px) {
     .EventPage {
         grid-template-columns: 20rem 1fr;
         grid-template-areas: 
-            "a b"
-            "a c"
-            "d c"
-            ". c";
+            "det ban"
+            "det des"
+            "map des"
+            ".   des";
+        column-gap: 5%;
         padding: 2rem 1rem;
     }
 
     .EventDetails {
-        width: 20rem;
-    }
-
-    .EventCategory {
-        font-size: 2rem;
-    }
-
-    .EventDetails>div {
-        width: 100%;
-    }
-
-    .EventDetails>div>div:last-child {
+        border-radius: .3rem;
+        padding: 0;
+        margin-bottom: 3rem;
+        background: none;
         text-align: right;
     }
 
-    .EventDetails .Day {
-        padding: 1.5rem;
+    .EventBanner {
+        border-radius: .3rem;
     }
 
     .EventPage .Map {
+        padding: 0;
+    }   
+
+    .EventDescription {
         padding: 0;
     }
 }
@@ -196,4 +195,4 @@
 @media only screen and (min-width: 1200px) {
 
 }
-  
+
