--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,48 +1,64 @@
 .FooterContainer {
-  color: white;
-  padding: 2rem;
-  width: 100%;
+  max-width: 75rem;
   margin: auto;
 }
 
-.FooterMsg {
-  width: 100%;
-  display: block;
-  font-size: .9rem;
+.FooterContainer>div {
+  display: flex;
 }
 
-.BottomLine {
-  font-size: .75rem;
-  max-width: 30rem;
-  width: 100%;
+.FooterContainer picture {
+  display: block;
+}
+
+.FooterContainer picture img {
+  display: block;
+  height: 4rem;
+}
+
+.FooterContainer p {
+  font-size: .9rem;
+  line-height: 1.2rem;
+  padding: 0;
   margin: 0;
 }
 
+.FooterMsg {
+  margin-bottom: 1rem !important;
+}
+
 @media only screen and (min-width: 0px) {
+
   .FooterContainer {
-    max-width: 30rem;
+    padding: 1rem;
   }
 
-  .FooterMsg {
-    padding: 0;
-    margin: auto;
-    max-width: 30rem;
+  .FooterContainer>div {
+    flex-direction: column;
+    padding: 0 0 4rem 0;
+  }
+
+  .FooterContainer picture img {
+    margin: 3rem auto;
   }
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 600px) {
+
   .FooterContainer {
-    max-width: 77rem;
-  }
-  
-  .FooterContainer div {
-    display: flex;
-    justify-content: space-between;
+    padding: 2rem;
   }
 
-  .FooterMsg {
-    padding: 2rem 1rem 4rem 0;
-    margin: 0;
-    max-width: 20rem;
+  .FooterContainer>div {
+    flex-direction: row;
+    padding: 2rem 0 10rem 0;
+  }
+
+  .FooterContainer picture img {
+    margin: auto;
+  }
+
+  .FooterContainer>div {
+    justify-content: space-between;
   }
 }
