--- a/frontend/src/components/langtoggle/LangToggle.css
+++ b/frontend/src/components/langtoggle/LangToggle.css
@@ -1,8 +1,19 @@
 .lang-toggle {
     cursor: pointer;
-    padding: 1rem .5rem;
-    line-height: 1rem;
+    padding: .5rem;
+    padding-right: 1rem;
+    line-height: 2rem;
+    font-size: 1.5rem;
     color: white;
-    width: 2.5rem;
+    width: 4rem;
     text-align: center;
+}
+
+@media only screen and (min-width: 800px) {
+    .lang-toggle {
+        padding: 1rem.5rem;
+        line-height: 1rem;
+        font-size: 1rem;
+        width: 3rem;
+    }
 }
